--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.16.2",
     "reflect-metadata": "^0.2.2",
