--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@types/cors": "^2.8.19",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
