--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.1.13",
+		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "^22",
 		"autoprefixer": "^10.4.21",
 		"eslint": "^9.22.0",
@@ -35,5 +36,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"jsonwebtoken": "^9.0.2"
 	}
 }
