feat(cart): integrate frontend with updated cart API and improve backend types
- Updated backend CartController to return cart data formatted for frontend consumption.
- Implemented CartForFrontend and CartItemForFrontend interfaces in PrismaCartRepository.
- Modified getCart method to include variation name and price for frontend display.
- Adjusted updateQuantity in frontend Svelte component to handle API response including variation info.
- Fixed TypeScript and Zod schemas for updateCartItem (body params simplified).
- Added authMiddleware to cart routes and updated fetch requests to include JWT token.
- Updated package.json with faker dependency and Prisma seed script.
- Cleaned up unused frontend product page and added pagination-ready marketplace page.

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,15 @@
     "test": "dotenv -e .env.test -- jest --runInBand",
     "test:watch": "jest --watch"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@prisma/client": "^6.16.2",
     "@types/cors": "^2.8.19",
     "bcrypt": "^6.0.0",
