--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-paginate": "^0.1.0",
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
